<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/list_padding" >

        <TextView
            android:id="@+id/BanSite"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5.0dip"
            android:background="@drawable/selection"
            android:clickable="true"
            android:text="@string/m_site"
            android:textColor="@color/red"
            android:textSize="25sp" />

        <View style="@style/Scheidingslijn" />

        <TextView
            android:id="@+id/BanFoto"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5.0dip"
            android:background="@drawable/selection"
            android:clickable="true"
            android:text="@string/m_foto"
            android:textColor="@color/red"
            android:textSize="25sp" />

        <View style="@style/Scheidingslijn" />

        <TextView
            android:id="@+id/BanAgenda"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5.0dip"
            android:background="@drawable/selection"
            android:clickable="true"
            android:text="@string/m_agenda"
            android:textColor="@color/red"
            android:textSize="25sp" />

        <View style="@style/Scheidingslijn" />

        <TextView
            android:id="@+id/BanWedstrijd"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5.0dip"
            android:background="@drawable/selection"
            android:clickable="true"
            android:text="@string/m_wedstrijd"
            android:textColor="@color/red"
            android:textSize="25sp" />

        <View style="@style/Scheidingslijn" />

        <TextView
            android:id="@+id/BanFacebook"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5.0dip"
            android:background="@drawable/selection"
            android:clickable="true"
            android:text="@string/m_facebook"
            android:textColor="@color/red"
            android:textSize="25sp" />

        <View style="@style/Scheidingslijn" />

        <TextView
            android:id="@+id/About"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5.0dip"
            android:background="@drawable/selection"
            android:clickable="true"
            android:text="@string/m_over"
            android:textColor="@color/red"
            android:textSize="25sp" />

        <View style="@style/Scheidingslijn" />
    </LinearLayout>

</RelativeLayout>